--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
 
-<title>Jual &amp; Jasa Pasang Toilet Kubikel Jombang &#8211; Jual &amp; Jasa Pasang Toilet Kubikel Termurah Di Jombang</title>
+<title>Jual &amp; Jasa Pasang Toilet Kubikel Jombang &#8211; Toilet.Cubicle.co.id</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="alternate" type="application/rss+xml" title="Jual &amp; Jasa Pasang Toilet Kubikel Jombang &raquo; Feed" href="/feed">
